--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./js/index.js" defer></script>
-
-    <title>Document</title>
+    <link rel="shortcut icon" href="./assets/appleFavicon.png" type="image/x-icon">
+    <title>Icloud clone</title>
   </head>
 
   <body class="bg-[#FBFBFD]">
